test/zinc_source/compile_errors/enums/13_close_aware_select_receive.zn
// expected-error: close-aware select receive is not supported for enum channels in v1
enum Signal {
    Start
}

fn main() {
    updates = chan()
    updates <- Signal.Start
    select {
        case value, is_open = <-updates {
            print("{is_open}")
            print("{value}")
        }
    }
}
